<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Kotlin</string>

    <!-- Hint shown in the name field. [CHAR LIMIT=NONE] -->
    <string name="name">Name</string>

    <!-- Used for the toppings header. [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>

    <!-- Caption of the whipped cream checkbox. [CHAR LIMIT=20] -->
    <string name="whipped_cream">Whipped cream</string>

    <!-- Caption for the Chocolate checkbox. [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>

    <!-- Message of the quantity text view. [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>

    <!-- initial quantity set. [CHAR LIMIT=3] -->
    <string name="initial_quantity_value">2</string>

    <!-- Header of the order summary [CHAR LIMIT=20] -->
    <string name="order_summary_header">Order Summary</string>

    <!-- The price field of the order summary. [CHAR LIMIT=3] -->
    <string name="price">$10</string>

    <!-- Caption of the order button. [CHAR LIMIT=10] -->
    <string name="order">Order</string>

    <!--
    Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
     user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>

    <!--
    Whipped cream topping for the order summary. It will be shown in the format of
    "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>

    <!--
    Chocolate topping for the order summary. It will be shown in the format "Add chocolate? true" or
    "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>

    <!--
    Quantity for the order summary. It will be shown in the format "Quantity: 2". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>


    <!--
    Total price of order. It will be shown in the format "Total: $10". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: $<xliff:g id="priceOfOrder" example="10">%i</xliff:g></string>

    <!-- Thank you message at the end of order summary -->
    <string name="thank_you">Thank you!</string>

    <!--
    Subject of the email. It will be shown in the format "Just Kotlin order for Amy". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">Just Kotlin order for <xliff:g id="name" example="Amy">%s</xliff:g></string>

</resources>